adding to webflow

--- a/public/timesheetbuilder.webflow.css
+++ b/public/timesheetbuilder.webflow.css
@@ -1328,6 +1328,14 @@ a {
   background-color: #fff;
 }
 
+.loading-screen.loading {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+
 .div-block {
   position: absolute;
   left: 0%;
